              than once when more than one foreign key to the parent existed.    

Graph Plugin: Referesh didn't work for newly created constraints

Fixed several bugs which made it impossible to work with SQLite.

Updated Italian translation (Ivo Neri)

Fixed a bug which made it difficult to see text that was being edited in a table.

2119937: Windows EOL chars (CRLF) are converted to Linux EOL (LF).

2102894: Missing Scale Placeholder in Sql server dialect.  This causes script generation and dbcopy 
targeting MS-SQL server to produce decimal columns without the scale attribute (that is, decimal(7) instead 
of decimal(7,5))

2092902: Focus remains on hidden session window for Alt-Arrow.  Removed code which was a 
work-around for a bug in java 1.3, that has since been fixed and was actually producing a 
bug seen in java5 and java6, where the Alt-RightArrow key shortcut switched session windows 
into the foreground without giving them focus.  Thanks goes to Johnathan James for the 
bug-fix.

2091569: FAQ is missing its images

2049336: Make Editable disappear from SQL/results tab

2018512: DB2 timestamps still don't work when milliseconds are zero. Patch submitted by Daniel Stränger.

2018018: (Bug in FormatSql function) Formatter now uses platform-specific EOL char sequence.  

2013346: export csv with option "carriage return + linefeed"

1958881: (Unable to see source of database views)  Adjusted the query for view source to use 
underlying system tables instead of INFORMATION_SCHEMA.VIEWS, since this view cannot handle views 
that are greater than 4000 characters.

1968807: Unsigned INT problem with IMPORT FILE functionality

1968270: Displaying unsigned INT as signed INT in column

1845987: PostgreSQL interval types are not displayed

1840266: Create Table Script sets varchar columns to 8000

1830649: Focus Loss

1824534: Constraint created twice

1902611: (Oracle) Don't fail on SQL-Plus "SET ..." commands in SQL script; Now, the Oracle plugin skips over 